--- a/public/stylesheets/marine.css
+++ b/public/stylesheets/marine.css
@@ -73,11 +73,22 @@ body{padding-top:1em; background: #ccc url("/images/background.png") top left re
 	-webkit-border-bottom-right-radius: 10px;
 	-moz-border-radius-bottomleft: 10px; 
 	-webkit-border-bottom-left-radius: 10px;
+	padding-top:1.5em;
+}
 
+ul#menu{
+	list-style:none;
+
+	margin:0;
+}
+
+ul#menu li{
+	margin:0;
+	padding:0;
 }
 
 a{font-weight:bold;text-decoration:none;}
-a:hover{text-decoration:underline;}
+a:hover{text-decoration:none;}
 /*table*/
 table {margin-bottom:1.4em;width:100%;}
 thead th {font-weight:bold;color:#eee;background:#666;border-bottom:1px solid #ccc;}
@@ -89,4 +100,8 @@ tbody {font-size:0.9em;}
 #flash{
 	float:right;
 	width:150px;
+}
+
+.button a:hover{
+	text-decoration:none;
 }
