--- a/app/views/assesments/show.html.erb
+++ b/app/views/assesments/show.html.erb
@@ -2,7 +2,7 @@
 	<h2>Assessment for <%= @a.file_name%></h2>
 
 	<% @a.tenements.each_with_index do |t,i| %>
-		<h3 style="margin:0;">Tenement <%= i%> <%= YAML.load(t.attribute_data).attributes[:name]	 %></h3>
+		<h3 style="margin:0;">Tenement <%= t.id%> <%= YAML.load(t.attribute_data).attributes[:name]	 %></h3>
 		<h5 class="quiet" style="margin:0.2em;">Overlaps</h5>
 		<table class="zebra">
 			<thead>
@@ -84,7 +84,7 @@
 <% content_for :right do %>
 	<h3 style="margin-bottom:0.5em;">Options</h3>
 	<ul id="menu">
-		<li><%= link_to "#{image_tag 'icons/page_excel.png'} Download results (CSV)", root_url, :class => "button" %></li>
+		<li><%= link_to "#{image_tag 'icons/page_excel.png'} Download results (CSV)", assesment_path(@a,:csv), :class => "button" %></li>
 		<li><%= link_to "#{image_tag 'icons/delete.png'} Delete assessment", assesment_path(@a), :method => :delete, :confirm => "are you sure you want to delete this assessment?", :class => "button negative" %>		
 	</ul>
 	
