--- a/app/views/assesments/show.html.erb
+++ b/app/views/assesments/show.html.erb
@@ -92,3 +92,8 @@
 	<div style="margin:1em 0;"><%= link_to "back to home", root_url, :class => "quiet small" %></div>
 	
 <% end -%>
+
+<% content_for :map do %>
+	<%= swf_tag "map" %>
+	
+<% end -%>
