added error to swf

--- a/app/views/assesments/show.html.erb
+++ b/app/views/assesments/show.html.erb
@@ -94,6 +94,5 @@
 <% end -%>
 
 <% content_for :map do %>
-	<%= swf_tag "map" %>
-	
+	<%= swf_tag "map", :flashvars => {:URL => request.url} %>
 <% end -%>
