--- a/app/views/assesments/show.html.erb
+++ b/app/views/assesments/show.html.erb
@@ -94,5 +94,7 @@
 <% end -%>
 
 <% content_for :map do %>
-	<%= swf_tag "map", :flashvars => {:URL => request.url} %>
+	<div style="border-bottom:3px solid #5592CC;">
+	<%= swf_tag "map", :flashvars => {:URL => request.url}, :height => 400 %>
+	</div>
 <% end -%>
