update styles wtih map

--- a/app/views/assesments/show.html.erb
+++ b/app/views/assesments/show.html.erb
@@ -94,7 +94,7 @@
 <% end -%>
 
 <% content_for :map do %>
-	<div style="border-bottom:3px solid #5592CC;">
+	<div style="border:1em solid #EEEEEE;">
 	<%= swf_tag "map", :flashvars => {:URL => request.url}, :height => 400 %>
 	</div>
 <% end -%>
