got the friggin swf to work and made it smaller

--- a/app/views/assesments/show.html.erb
+++ b/app/views/assesments/show.html.erb
@@ -94,5 +94,5 @@
 <% end -%>
 
 <% content_for :map do %>
-	<%= swf_tag "map", :flashvars => {:URL => request.url} %>
+	<%= swf_tag "map", :flashvars => {:URL => request.url}, :height => 400 %>
 <% end -%>
