tidied up the sql to remove wierd names and sites that overlap in the proximity table

--- a/app/views/assesments/show.html.erb
+++ b/app/views/assesments/show.html.erb
@@ -23,7 +23,7 @@
 				<% t.overlapping_pas.each do |p| %>
 				<tr>
 					<td>
-						<%= p.name_eng %>
+						<%= p.name_eng == 'English name not known' ? p.name_loc : p.name_eng  %>
 					</td> 
 					<td>
 						<%= p.iucncat %>
@@ -60,7 +60,7 @@
 				<% t.nearby_pas.each do |p| %>
 				<tr>
 					<td>
-						<%= p.name_eng %>
+						 <%= p.name_eng == 'English name not known' ? p.name_loc : p.name_eng  %>					
 					</td> 
 					<td>
 						<%= p.iucncat %>
