--- a/app/views/assesments/show.html.erb
+++ b/app/views/assesments/show.html.erb
@@ -96,7 +96,7 @@
 <% content_for :map do %>
 
 	<div style="border:1em solid #EEEEEE;">
-	<%= swf_tag "map", :flashvars => {:URL => request.url}, :height => 400 %>
+	<%= swf_tag "map", :flashvars => {:URL => request.url, :KEY => "ABQIAAAAdc829JdHWtQwsQprwWSx5xQckUEosiSFA09wO5aMrMRSmM89ohSqmg4BhCoZRK2_LVTJ2yZjy9gcGw"}, :height => 400 %>
 	</div>
 
 <% end -%>
