--- a/app/views/assesments/show.html.erb
+++ b/app/views/assesments/show.html.erb
@@ -29,7 +29,7 @@
 						<%= p.iucncat %>
 					</td>
 					<td>
-						<%= p.desig_loc%>
+						<%= p.desig_eng%>
 					</td>
 				</tr>		
 				<% end -%>
@@ -66,7 +66,7 @@
 						<%= p.iucncat %>
 					</td>
 					<td>
-						<%= p.desig_loc%>
+						<%= p.desig_eng%>
 					</td>
 					<td>
 						<%= number_with_precision p.analyses.find_by_tenement_id(t.id, :conditions => "analyses.type = 'AnalysisProximity'").try(:value) * 100,:precision => 2 %> km
