--- a/app/views/assesments/show.html.erb
+++ b/app/views/assesments/show.html.erb
@@ -89,7 +89,7 @@
 	</ul>
 	
 	<div class="clear" style="border-bottom:1px solid #fff;"></div>
-	<div style="margin:1em 0;"><%= link_to "back to home", root_url, :class => "quiet small" %></div>
+	<div style="margin:1em 0;"><%= link_to "back to assessments", root_url, :class => "quiet small" %></div>
 	
 <% end -%>
 
