removed map on site page

--- a/app/views/tenements/show.html.erb
+++ b/app/views/tenements/show.html.erb
@@ -23,32 +23,16 @@
                   <li id="currentTab"><%= link_to "<span>Information</span>", assesment_tenement_path(@a,@t) %></li>
                 </ul>
               </div>
-              <a href="#" id="zoom_in"></a>
-              <a href="#" id="zoom_out"></a>
-              <a href="#" id="terrain"></a>
-              <a href="#" id="satellite"></a>
             </div>
         </div>
       </div>
     </div>
         
-		<div class="pa_map">	
-       
-            <div id="js_map"></div>
-            <p id="loadingPa">Transfering data</p>
+		<div class="pa_map" style="height:0px;">	       
         </div>	
 
         <div class="toggle_map_size_container">
         
-            <div class="toggleMapSizeTab">
-				
-                	
-                <ul>
-                    <li>
-                        <a id="toogle_size_map" href="#">expand</a>
-                    </li>
-                </ul>
-            </div>
         </div>
 
 				<div id="layout">
