--- a/app/views/assesments/index.html.erb
+++ b/app/views/assesments/index.html.erb
@@ -55,7 +55,7 @@
 				
 				
 
-				<h3>Asses Tenements in ProtectedPlanet.net</h3>
+				<h3>Assess Tenements in ProtectedPlanet.net</h3>
 				<div id="search_input">
 					<label>Upload a new assessment</label>
 					<% form_for @assesment, :html => {:multipart => true} do |f| %>  
