--- a/public/stylesheets/base_packaged.css
+++ b/public/stylesheets/base_packaged.css
@@ -59,7 +59,7 @@ div#signUp div.bottomData p {font:normal 12px Arial; color:#666666;}
 div#signUp div.bottomData p a {text-decoration:none; font:bold 12px Arial; color:#FF6600; margin:0 0 0 5px;}
 div#signUp div.bottomData p a:hover {text-decoration:underline}
  div#header_home {z-index:1000; position:absolute; top:0; left:0; right:0; background:url(../images/home/header_bg_home.png) repeat-x 0 0; display:none;}
-div#header_home a.logoHome{float:left; width:200px; height:36px; background:url(../images/home/logoHome.png) no-repeat 0 0;}
+div#header_home a.logoHome{float:left; width:285px; height:36px; background:url(../images/home/logoHome.png) no-repeat 0 0;}
 div#header_home form {float:right; width:auto; margin:6px 5px 0 0;}
 div#header_home form input[type="text"]{float:left; background:url(../images/home/inputSearch.gif) no-repeat 0 0; padding:5px 25px 5px 5px; width:165px; margin:0; border:none; font:normal 13px Arial; font-style:italic; color:#aaaaaa;}
 div#header_home form input[type="text"]:focus {outline:none;}
@@ -81,12 +81,12 @@ p#loadingPa {position:absolute; right:0; left:0; margin:0 auto; top:150px; width
 div#searchBox {width:800px; height:215px; margin:120px auto auto auto; position:relative; z-index: 1000; background:url(../images/common/background.png) no-repeat 0 0;}
 div#searchBox label {font:bold 17px Arial; color:white; letter-spacing:-0.5px;}
 div#searchBox h3 {float:left; width:700px; font:bold 33px Arial; color: #133E64; letter-spacing:-1px; padding:0; margin:40px 0 0 36px;}
-div#searchBox div#search_input {float:left; width:460px; height:80px; margin:15px 0 0 36px;}
+div#searchBox div#search_input {float:left; width:400px; height:80px; margin:15px 0 0 36px;}
 div#searchBox input#search_inputText {float:left; width:320px; padding:9px 8px 10px 8px; margin-top:5px; font:normal 15px Arial; color:#999999; background:url(../images/common/textinput.png) no-repeat 0 0; border:none;}
 div#searchBox input#search_inputText:focus {border:none; outline:none;}
 div#searchBox input#search_inputButton {float:left; width:120px; height:36px; margin-top:5px; padding:0px 8px 0 8px; font:bold 21px Arial; color:#FFFFFF; background:url(../images/common/search.png) no-repeat right 0; border:none; letter-spacing:-1px;}
 div#searchBox input#search_inputButton:hover {background:url(../images/common/search.png) no-repeat right -36px; cursor:pointer;}
-div#searchBox div#explore_input {float:left; width:240px; height:90px; margin:15px 0 0 15px;}
+div#searchBox div#explore_input {float:left; width:300px; height:90px; margin:15px 0 0 15px;}
 div#searchBox div#explore_input a {float:left; width:240px; background:url(../images/common/explore.png) no-repeat 0 0; margin-top:5px; font:bold 19px Arial; color:#FFFFFF; padding:8px 0 5px 0; text-align:center; height:23px; text-decoration:none;}
 div#searchBox div#explore_input a:hover {background:url(../images/common/explore.png) no-repeat 0 -36px; cursor: pointer;}
 div#searchBox div#explore_input a:focus {outline:none;}
@@ -1409,8 +1409,8 @@ div#user_layout div.user_content div.data div.left_container ul#downloads_list l
 div#user_layout div.user_content div.data div.left_container ul#downloads_list li p a:hover {border-bottom:1px dotted #254c72; color:#254c72;}
 div#user_layout div.user_content div.data div.left_container ul#downloads_list li p.ago {font-weight:normal; color:#999999; padding: 0 0 8px 0;}
 div#user_layout div.user_content div.data div.left_container ul#downloads_list li p.last {font-weight:normal; color:#999999; padding:0;}
-div#user_layout div.user_content div.data div.left_container ul#downloads_list li p.last a.download {font:bold 11px Arial; color:white; text-decoration:none; background:url(../images/user/download_button.png) no-repeat 0 0; padding:4px 8px;}
-div#user_layout div.user_content div.data div.left_container ul#downloads_list li p.last a.download:hover {color:#66CC66; border-bottom:none; background-position:0 -50px;}
+div#user_layout div.user_content div.data div.left_container ul#downloads_list li p.last a.download {font:bold 11px Arial; color:white; text-decoration:none; background: #66CC66;border-radius:2px; padding:4px 8px;}
+div#user_layout div.user_content div.data div.left_container ul#downloads_list li p.last a.download:hover {color:#66CC66; border-bottom:none;background:none;}
 div#user_layout div.user_content div.data div.left_container ul#downloads_list li p.last a.preparing {font:bold 11px Arial; color:white; color:#FF6600; text-decoration:none; background:none;}
 div#user_layout div.user_content div.data div.left_container ul#downloads_list li p.last a.preparing:hover {color:#C14D00; border-bottom:none;}
 div#user_layout div.user_content div.data div.left_container ul {float:left; width:612px; list-style:none; margin:0 0 30px 0;}
