updated cosmetics more

--- a/app/views/assesments/_search_result.html.erb
+++ b/app/views/assesments/_search_result.html.erb
@@ -10,7 +10,7 @@
  		<div class="top_information">
  			<h4><%= link_to "Polygon #{search_result.id}", assesment_tenement_path(@a, search_result) %></h4>
 			<p class="category">
-				<b><%= pluralize search_result.sites.count, "Protected Area" %> overlap</b>  
+				<b><%= pluralize search_result.sites.count, "Protected area" %> touch</b>  
 			</p>
 			<p class="distance">
 				<table cellspacing="0" cellpadding="0" class="datatable">
