--- a/app/views/assesments/_search_results.html.erb
+++ b/app/views/assesments/_search_results.html.erb
@@ -2,7 +2,7 @@
 	 
     <div class="protected_search">
 			<h3>
-      	We fount <%= pluralize @a.tenements.count, "polygon"%> in your upload
+      	We found <%= pluralize @a.tenements.count, "polygon"%> in your upload
 			</h3>
     </div>
     
