--- a/app/views/assesments/index.html.erb
+++ b/app/views/assesments/index.html.erb
@@ -81,7 +81,7 @@
 							<a href="http://www.iucn.org/about/union/commissions/wcpa/" target="_blank"><img src="../images/logos/WCPAhome.gif"></a>
 						 </div>
 						 <div class="bottomLinks"><p>&copy; 2010 ProtectedPlanet.net / All rights reserved / <%= link_to 'all', "http://www.protectedplanet.net/search" %> /
-							<%= link_to 'blog', "http://blog.protectedplanet.net"%> / <%= link_to 'about', "http://www.protectedplanet.net" %><!--<a href="#">/ sitemap</a>--></p></div>
+							<%= link_to 'blog', "http://blog.protectedplanet.net"%> / <%= link_to 'about', "http://www.protectedplanet.net/about" %><!--<a href="#">/ sitemap</a>--></p></div>
 					</div>
 				</div>
 				
