--- a/app/views/assesments/show.html.erb
+++ b/app/views/assesments/show.html.erb
@@ -35,17 +35,17 @@
 	              <div class="arrowFilterResults"></div>
 	              <div class="contentFilter">
 	                  <div class="filter_container">
-	                  		<h3>Protection Analysis</h3>	
+	                  		<h3>Protection analysis</h3>	
 																										
 	                     <div class="data_content">
 
-												<h4 style="margin:5px 0 10px 0;">Overall Protection in Upload</h4>
+												<h4 style="margin:5px 0 10px 0;">Overall protection in upload</h4>
 												<%= Gchart.pie(:data => [@percent_protected, 1-@percent_protected], 
 																			 :custom => "chdl=#{["Protection", "No Protection"].join("|")}&amp;chco=#{pie_colors.join("|")}",
 																			 :labels => ["#{number_with_precision(@percent_protected *100, 0)}%", "#{number_with_precision((1-@percent_protected) *100, 0)}%"], 
 																			 :size => "280x120", :format => 'image_tag') %>
 
-												<h4 style="margin:10px 0 5px 0;">Protected Area Photos</h4>
+												<h4 style="margin:10px 0 5px 0;">Protected area images</h4>
 												<p>
 												<% images = @a.tenements.map{|t| t.sites.map{|s| s.image } }.flatten.compact %>
 												<% images[0..7].each do |s| %>
@@ -56,7 +56,7 @@
 
 																			
 																			
-												<h4 style="margin:15px 0 0px 0;">Download Analysis Results</h4>							
+												<h4 style="margin:15px 0 0px 0;">Download results</h4>							
 												<ul id="menu">
 													<li><%= link_to "#{image_tag 'famfamfam/page_white_acrobat.png'} PDF document", assesment_path(@a,:csv), :class => "button" %></li>
 													<li><%= link_to "#{image_tag 'famfamfam/page_excel.png'} Excel spreadsheet (CSV)", assesment_path(@a,:csv), :class => "button" %></li>															
