--- a/app/views/tenements/show.html.erb
+++ b/app/views/tenements/show.html.erb
@@ -23,17 +23,19 @@
                   <li id="currentTab"><%= link_to "<span>Information</span>", assesment_tenement_path(@a,@t) %></li>
                 </ul>
               </div>
+							<a href="#" id="zoom_in"></a>
+              <a href="#" id="zoom_out"></a>
             </div>
         </div>
       </div>
     </div>
         
-		<div class="pa_map" style="height:0px;">	       
+
+				<div class="pa_map">									
+            <div id="js_map map_canvas"></div>
+            <p id="loadingPa">Transfering data</p>
         </div>	
 
-        <div class="toggle_map_size_container">
-        
-        </div>
 
 				<div id="layout">
 			    <div id="containers">
@@ -129,11 +131,8 @@
 		
 
 
-				<a id="pa_map_json_link" href="<%= @t.id %>" style="display:none" ></a>
-				<a id="is_pa_editable" style="display:none">true</a>
-								
-
-				<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAdc829JdHWtQwsQprwWSx5xQckUEosiSFA09wO5aMrMRSmM89ohSqmg4BhCoZRK2_LVTJ2yZjy9gcGw" type="text/javascript" charset="utf-8"></script>
+				<p id="search_map_data" style="display:none"><%= @map_json %></p>
+				<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript" charset="utf-8"></script>
 				<%= javascript_include_merged :site %>
 
 <% end -%>
