--- a/app/views/tenements/show.html.erb
+++ b/app/views/tenements/show.html.erb
@@ -32,7 +32,7 @@
         
 
 				<div class="pa_map">									
-            <div id="js_map map_canvas"></div>
+            <div id="map_canvas" style="width:100%; height:100%"></div>
             <p id="loadingPa">Transfering data</p>
         </div>	
 
@@ -130,7 +130,7 @@
 
 		
 
-
+				<p id="t_map_data" style="display:none"><%= @t_json %></p>
 				<p id="search_map_data" style="display:none"><%= @map_json %></p>
 				<script src="http://maps.google.com/maps/api/js?sensor=false" type="text/javascript" charset="utf-8"></script>
 				<%= javascript_include_merged :site %>
